# lazydocs

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  build.py  codecov.yml  pyproject.toml  requirements-dev.txt  requirements_dev.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  pr-labeler-file-path.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: 01_bug-report.md  02_feature_request.md  03_documentation.md  04_deployment-problem.md  05_other.md
.github/actions/build-environment/: Dockerfile  action.yml  entrypoint.sh
.github/actions/get-release-version/: Dockerfile  action.yml  entrypoint.sh
.github/linters/: .flake8  .markdown-lint.yml
.github/workflows/: build-pipeline.yml  check-commit-messages.yml  close-stale-issues.yml  codeql.yml  lint-project.yml  pr-labeler.yml  release-pipeline.yml
.reuse/: dep5
docs/: README.md  lazydocs.about.md  lazydocs.cli.md  lazydocs.generation.md  lazydocs.generator.md  lazydocs.md
src/lazydocs/: __init__.py  __main__.py  _about.py  _cli.py  about.py  cli.py  generation.py  generator.py
tests/: test_generation.py  test_markdown.py
tests/resources/example/: __init__.py  _class.py  _dataclass.py  _types.py  dataclass_example.py
workflow/: 2
