[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]

[tool.black]
exclude = '''
(
    \.egg
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | setup.py
)
'''
line-length = 88
target-version = ['py36', 'py37', 'py38']
